--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "antd": "^4.5.4",
     "axios": "^0.19.2",
     "craco-antd": "^1.18.1",
+    "formik": "^2.1.5",
+    "formik-antd": "^2.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "typescript": "~3.7.2",
-    "webpackbar": "^4.0.0"
+    "webpackbar": "^4.0.0",
+    "yup": "^0.29.3"
   },
   "scripts": {
     "start": "craco start",
